--- a/app/src/main/res/layout/activity_main_activity.xml
+++ b/app/src/main/res/layout/activity_main_activity.xml
@@ -1,30 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.klokkenapp.klokken.MainActivity">
+    tools:context="com.klokkenapp.klokken.MainActivity"
+    android:orientation="vertical"
+    >
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button
-            android:text="Call Gmail API"
+    <Toolbar
             android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:background="#ff8f00">
+
+        <ImageView
+            android:layout_gravity="left"
+            android:layout_marginRight="10dp"
+            android:layout_width="96px"
+            android:layout_height="96px"
+            android:padding="50dp"
+            android:clickable="true"
+            android:onClick="filterClick"
+            android:background="@drawable/ic_filter_list_white_48dp"
+            android:id="@+id/filterIcon" />
+
+        <TextView
+            android:text="@string/tool_bar_title_alerts"
+            android:textAllCaps="true"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonManualGmailCheck"
-            android:onClick="buttonManualGmailCheckClick" />
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/textView"
+            android:textStyle="normal|bold"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textColor="@android:color/white" />
 
-        <ListView
+        <ImageView
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_width="96px"
+            android:layout_height="96px"
+            android:padding="30dp"
+            android:clickable="true"
+            android:onClick="settingsClick"
+            android:background="@drawable/ic_settings_white_48dp"
+            android:id="@+id/settingsIcon" />
+
+        </Toolbar>
+    
+
+        <FrameLayout
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorAccent" />
-    </LinearLayout>
-</RelativeLayout>
+            android:layout_height="0pt">
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?android:attr/colorBackground" />
+
+            <Button
+                android:text="Call"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:id="@+id/buttonManualGmailCheck"
+                android:onClick="buttonManualGmailCheckClick"
+                android:layout_gravity="bottom|right"/>
+
+        </FrameLayout>
+
+</LinearLayout>
