--- a/app/src/main/res/layout/activity_main_activity.xml
+++ b/app/src/main/res/layout/activity_main_activity.xml
@@ -10,7 +10,8 @@
 
     <Toolbar
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="56dp"
+            android:elevation="4dp"
             android:background="@color/colorPrimaryLight">
 
         <ImageView
@@ -65,6 +66,7 @@
                 android:background="@color/colorPrimaryLight"
                 android:onClick="buttonManualGmailCheckClick"
                 android:layout_gravity="bottom|right"
+                android:elevation="2dp"
                 android:textColor="@color/colorPrimary" />
 
             <ListView
