--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimaryLight">#ff8f00</color>
     <color name="colorAccent">#263238</color>
     <color name="actionBarBackground">#ff8f00</color>
+    <color name="colorBackgroundGrey">#F5F5F5</color>
 </resources>
