--- a/app/src/main/res/layout/alertlist_view.xml
+++ b/app/src/main/res/layout/alertlist_view.xml
@@ -13,25 +13,64 @@
     android:elevation="2dp"
     android:background="@drawable/border_shadow">
 
-    <TextView
-        android:id="@+id/alertListTime"
-        android:layout_height="wrap_content"
+    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="Time" />
+        android:weightSum="1"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/alertListTime"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="0.2"
+            android:text="Time:" />
+        <TextView
+            android:id="@+id/alertListTimeValue"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="0.8"
+            android:text="Test" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/alertListFrom"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="From" />
+        android:weightSum="1"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/alertListFrom"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:text="From:" />
+        <TextView
+            android:id="@+id/alertListFromValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.8"
+            android:text="Test" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/alertListSubject"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="Subject" />
+        android:weightSum="1"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/alertListSubject"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:text="Subject:" />
+        <TextView
+            android:id="@+id/alertListSubjectValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.8"
+            android:text="Test" />
+    </LinearLayout>
 
 </LinearLayout>
