--- a/app/src/main/res/layout/alertlist_view.xml
+++ b/app/src/main/res/layout/alertlist_view.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="0.8"
-            android:text="Test" />
+            android:text="" />
     </LinearLayout>
 
     <LinearLayout
@@ -50,7 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.8"
-            android:text="Test" />
+            android:text="" />
     </LinearLayout>
 
     <LinearLayout
@@ -70,7 +70,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.8"
-            android:text="Test" />
+            android:text="" />
     </LinearLayout>
 
 </LinearLayout>
