--- a/app/src/main/res/layout/activity_main_activity.xml
+++ b/app/src/main/res/layout/activity_main_activity.xml
@@ -15,7 +15,7 @@
             android:elevation="4dp"
             android:background="@color/colorPrimaryLight">
 
-        <ImageView
+        <!--<ImageView
             android:layout_gravity="left"
             android:layout_marginRight="10dp"
             android:layout_width="96px"
@@ -24,7 +24,7 @@
             android:clickable="true"
             android:onClick="filterClick"
             android:background="@drawable/ic_filter_list_white_48dp"
-            android:id="@+id/filterIcon" />
+            android:id="@+id/filterIcon" />-->
 
         <TextView
             android:text="@string/tool_bar_title_alerts"
@@ -37,7 +37,7 @@
             android:textSize="24sp"
             android:textColor="@android:color/white" />
 
-        <ImageView
+        <!--<ImageView
             android:layout_gravity="right"
             android:layout_marginRight="10dp"
             android:layout_width="96px"
@@ -46,7 +46,7 @@
             android:clickable="true"
             android:onClick="settingsClick"
             android:background="@drawable/ic_settings_white_48dp"
-            android:id="@+id/settingsIcon" />
+            android:id="@+id/settingsIcon" /> -->
 
     </Toolbar>
 
